half done stuff

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             <div id="boggle-container"></div>
             <div id="submit-button-div">
                 <div id="now-spelling"></div>
-
                 <button id="submit-button" disabled>SUBMIT</button>
             </div>
         </div>
@@ -62,7 +61,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="scripts/boggleClass.js"></script>
     <script src="scripts/timer.js"></script>
-    <script src="scripts/app_v1.2.js"></script>
+    <script src="scripts/app.js"></script>
 
 
 </body>
