--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,700;1,400&family=Nunito&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styles/buttons.css">
+
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/buttons.css">
+    <link rel="stylesheet" href="styles/boggle-container.css">
     <link rel="stylesheet" href="styles/timerstyle.css">
     <title>Boggle</title>
 </head>
@@ -19,10 +21,14 @@
     <header>
         <h1>SCRAMBLE WITH FRIENDS</h1>
 
-        <div id="shuffle-button-div">
-            <button id="play-button">START</button><button id="instruction-button">INSTRUCTIONS</button>
-            <div id="instruction-popup">INSTRUCTIONS</div>
+        <div id="menu-buttons-div">
+            <button id="play-button">START</button>
+            <button id="instruction-button">INSTRUCTIONS</button>
+        </div>
+        <div id="instruction-popup">
             <div id="instruction-popup-close-button">x</div>
+            <p>blah blah blah</p>
+
         </div>
     </header>
 
