--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles/main.css">
+
     <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/boggle-container.css">
     <link rel="stylesheet" href="styles/timerstyle.css">
+    <link rel="stylesheet" href="styles/loading-page.css">
     <title>Boggle</title>
 </head>
 
@@ -66,6 +68,10 @@
             Happy finding!
         </p>
 
+    </div>
+    <div class="loading-page">
+
+        <div class="loading-animation">LOADING</div>
     </div>
     <script src="scripts/main.js"></script>
 
