--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <div class="loading-page">
 
         <div class="loading-animation"></div>
+        <p class="loading-text">LOADING...</p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"
         integrity="sha512-5T245ZTH0m0RfONiFm2NF0zcYcmAuNzcGyPSQ18j8Bs5Pbfhp5HP1hosrR8XRt5M3kSRqzjNMYpm2+it/AUX/g=="
