Added CSS to style high score container

--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@
                 <div id="total-score-number"></div>
             </div>
         </div>
-        <div id="high-score-div">
-            <h5>HIGH SCORE</h5>
-            <div id="high-score-number"></div>
+        <div id="high-score-container">
+            <div id="high-score-div">
+                <h5>HIGH SCORE</h5>
+                <div id="high-score-number"></div>
+            </div>
         </div>
+
     </div>
     </div>
     <div class="instruction-popup">
