Allow user input for timer

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="overall-game-container">
         <div class="timer">
             <div class="controls">
-                <input id="seconds-left" value="">
+                <input id="seconds-left" value="30">
             </div>
             <svg class="dial">
                 <circle cx="140" cy="60" r="48" transform="rotate(-90 100 100)" />
