--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <link rel="stylesheet" href="styles/boggle-container.css">
     <link rel="stylesheet" href="styles/timerstyle.css">
     <link rel="stylesheet" href="styles/loading-page.css">
-    <title>Boggle</title>
+    <title>ScraBoggle</title>
 </head>
 
 <body>
 
     <header>
-        <h1>SCRAMBLE WITH FRIENDS</h1>
+        <h1>SCRABOGGLE</h1>
 
         <div id="menu-buttons-div">
             <button id="play-button">START</button>
