Added select num players option

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         <div id="menu-buttons-div">
             <button id="play-button">START</button>
             <button class="instruction-button">INSTRUCTIONS</button>
+            <select name="num-players" id="num-players">
+                <option value="1">ONE</option>
+                <option value="2">TWO</option>
+                <option value="3">THREE</option>
+            </select>
         </div>
 
     </header>
