--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles/main.css">
-
+    <link rel="stylesheet" href="styles/multiplayer.css">
     <link rel="stylesheet" href="styles/buttons.css">
     <link rel="stylesheet" href="styles/boggle-container.css">
     <link rel="stylesheet" href="styles/timerstyle.css">
@@ -80,6 +80,11 @@
             Happy finding!
         </p>
 
+    </div>
+    <div class="next-player-countdown-div">
+        <p class="next-player-countdown">
+            NEXT PLAYER'S GET READY...
+        </p>
     </div>
     <div class="loading-page">
 
