set timer at fixed time for multiplayer

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <option value="1">ONE</option>
                 <option value="2">TWO</option>
                 <option value="3">THREE</option>
+                <option value="4">FOUR</option>
             </select>
         </div>
         <h1>SCRABOGGLE WITH FRIENDS</h1>
