--- a/index.html
+++ b/index.html
@@ -80,11 +80,15 @@
 
         <p>
             <span class="instruction-popup-close-button">&times;</span>
-            Welcome to Scramble With Friends! You have 60 seconds to find as many words (three letters or longer) as
+            Welcome to Scramble With Friends! Your goal is to find as many words (three letters or longer) as
             you can. Left-click and drag
             your mouse to select and un-select letters. Release the click to submit your word.
             <br /> <br />
-            Happy finding!
+            <strong>Single player:</strong> Before pressing start, you may set a timing of your choice by directly
+            editing the timer input.
+            <br /> <br />
+            <strong>Multiplayer:</strong> Before pressing start, choose your number of players in the top right. See who
+            can get a higher score on the same board in 30 seconds!
         </p>
 
     </div>
